# ups_emulator

./: CMakeLists.txt  README.md  run_coverage.sh.in  ups_model_config.cpp  ups_model_config.h  ups_models.ini
src/: main.cpp  ups_model_config.h
tests/: ups_model_config_test.cpp
tests/coverage/: CMakeLists.txt  run_coverage.sh.in
